# Autobench-

./: .gitignore  README.md  RESULTS.md  methods.yaml  program.md  pyproject.toml  run_eval.py  setup.sh
experiments/: attention_patch.py  config.yaml
experiments/patches/: combined_selective_patch.py  combined_sla_patch.py  hybrid_nabla_patch.py  hybrid_sla_patch.py  hybrid_vmoba_patch.py  monarchrt_patch.py  nabla_sta.py  pisa_patch.py  sla_patch.py  vmoba_patch.py
harness/: __init__.py  config_schema.py  evaluate.py  metrics.py  model.py  prompts.json
results/: baseline_quality.json  pareto.json  results.jsonl
